--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
     <string name="app_name">Where</string>
-    <string name="msg">%1$s tracking location in the background</string>
-    <string name="location_unknown">Location Unknown</string>
-    <string name="location_updates_label">Location Updates</string>
 
     <string name="permission_rationale">Location permission needed for core functionality</string>
     <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
@@ -10,10 +7,7 @@
     <string name="ok">OK</string>
 
     <string name="start_location_updates_button_text">Start receiving location updates</string>
-    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
-
-    <string name="location_updated">Location Updated: %1$s</string>
-
-    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
+    <string name="stop_location_updates_button_text">Stop</string>
     <string name="no_location_text">No current location</string>
+    <string name="open">Open</string>
 </resources>
